update index file

--- a/index.html
+++ b/index.html
@@ -18,3 +18,16 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
 </head>
+
+<body data-spy="scroll" data-target="#navbar-example2">
+    <header>
+        <nav id="navbar-example2" class="fixed-top navbar navbar-expand-lg navbar-light ">
+            <div class="container-fluid px-4">
+                <a class="navbar-brand" href="index.html">
+                    <img src="./assets/images/hex_logo.png" width="36" height="40" alt="code logo">
+                </a>
+                <button class="navbar-toggler rounded-0 ml-auto" type="button" data-toggle="collapse"
+                    data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
