--- a/index.html
+++ b/index.html
@@ -31,3 +31,20 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav text-uppercase ml-auto">
+                        <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li> -->
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger"
+                                href="assets/img/Angella T Jean-Louis Resume.pdf">Resume</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://https://github.com/Angella77"
+                                target="_blank">GitHub</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger"
+                                href="https://www.linkedin.com/in/angella-jean-louis-558309143/" target="_blank">LinkedIn</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Team</a></li> -->
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
