--- a/index.html
+++ b/index.html
@@ -64,4 +64,22 @@
                     <h2 class="section-heading text-uppercase">Portfolio</h2>
                     <h3 class="section-subheading text-muted">Full Stack Web Developer Projects</h3>
                 </div>
+                <div class="row text-center text-lg-left">
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <a href="https://github.com/Angella77/Homework-12" class="d-block mb-4 h-100"
+                            target="_blank">
+                                <alt=Employee Management System>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <a href="https://github.com/Angella77/Homework-13" class="d-block mb-4 h-100" target="_blank">
+                                <alt=Node Express Handlebars>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <a href="https://github.com/Angella77/Project2" class="d-block mb-4 h-100"
+                            target="_blank">
+                                <alt="Project 2 - Party Planner>
+                        </a>
+                    </div>
         
