--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger"
                                 href="assets/img/Angella T Jean-Louis Resume.pdf">Resume</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://https://github.com/Angella77"
-                                target="_blank">GitHub</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger"
-                                href="https://www.linkedin.com/in/angella-jean-louis-558309143/" target="_blank">LinkedIn</a></li>
+                                href="https://https://github.com/Angella77" target="_blank">GitHub</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger"
+                                href="https://www.linkedin.com/in/angella-jean-louis-558309143/"
+                                target="_blank">LinkedIn</a></li>
                         <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Team</a></li> -->
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                     </ul>
@@ -66,20 +67,37 @@
                 </div>
                 <div class="row text-center text-lg-left">
                     <div class="col-lg-4 col-md-6 col-12">
-                        <a href="https://github.com/Angella77/Homework-12" class="d-block mb-4 h-100"
-                            target="_blank">
-                                <alt=Employee Management System>
+                        <a href="https://github.com/Angella77/Homework-12" class="d-block mb-4 h-100" target="_blank">
+                            <alt=Employee Management System>
                         </a>
                     </div>
                     <div class="col-lg-4 col-md-6 col-12">
                         <a href="https://github.com/Angella77/Homework-13" class="d-block mb-4 h-100" target="_blank">
-                                <alt=Node Express Handlebars>
+                            <alt=Node Express Handlebars>
                         </a>
                     </div>
                     <div class="col-lg-4 col-md-6 col-12">
-                        <a href="https://github.com/Angella77/Project2" class="d-block mb-4 h-100"
-                            target="_blank">
-                                <alt="Project 2 - Party Planner>
+                        <a href="https://github.com/Angella77/Project2" class="d-block mb-4 h-100" target="_blank">
+                            <alt="Project 2 - Party Planner>
                         </a>
                     </div>
-        
+                </div>
+        </section>
+        <!-- About-->
+        <section class="page-section" id="about">
+            <div class="container about-cir">
+                <h2>About Me.</h2>
+            </div>
+            </div>
+
+            <div class="col-lg-9 col-md-8 col-sm-12 my-auto text-center text-md-left text-lg-left border-left pl-4">
+                <p>Hello, My name is Angella Jean-Louis. I'm excited to learn how to code and to get involved in this
+                    field. So far I have learned a bunch of cool things, like learning to built this responsive
+                    portfolio. Even though it's not fully done right, nevertheless I was able to create something. I'm
+                    excited to learn more and build more cool things and definitely build a much better responsive
+                    portfolio in the very near future. I'm still not there in creating an actual responsive portfolio.
+                    Even I've learned the tools to create it but I'm still struggling to create. I'm finding that my
+                    lack of time and energy is working against me in doing everything like I need to. I'm hoping forward
+                    and hoping that I find the time and energy to put into practicing with what I'm learning soon.</p>
+            </div>
+            </div>
