--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <!-- About-->
         <section class="page-section" id="about">
             <div class="container about-cir">
-                <h2>About Me.</h2>
+                <h2>About Me</h2>
             </div>
             </div>
 
@@ -101,3 +101,19 @@
                     and hoping that I find the time and energy to put into practicing with what I'm learning soon.</p>
             </div>
             </div>
+        </section>
+        <!-- Contact-->
+        <section class="page-section" id="contact">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">Contact Me</h2>
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                </div>
+                <form id="contactForm" name="sentMessage" novalidate="novalidate">
+                    <div class="row align-items-stretch mb-5">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <input class="form-control" id="name" type="text" placeholder="Your Name *"
+                                    required="required" data-validation-required-message="Please enter your name." />
+                                <p class="help-block text-danger"></p>
+                            </div>
