--- a/index.html
+++ b/index.html
@@ -130,3 +130,19 @@
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
+                        <div class="col-md-6">
+                            <div class="form-group form-group-textarea mb-md-0">
+                                <textarea class="form-control" id="message" placeholder="Your Message *" required="required"
+                                    data-validation-required-message="Please enter a message."></textarea>
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <div id="success"></div>
+                        <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Send
+                            Message</button>
+                    </div>
+                </form>
+            </div>
+        </section>
