--- a/index.html
+++ b/index.html
@@ -6,28 +6,23 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
   
+     <title>Angella Jean-Louis</title>
+</head>
 
-<body data-spy="scroll" data-target="#navbar-example2">
-    <header>
-        <nav id="navbar-example2" class="fixed-top navbar navbar-expand-lg navbar-light ">
-            <div class="container-fluid px-4">
-                <a class="navbar-brand" href="index.html">
-                    <img src="./assets/images/hex_logo.png" width="36" height="40" alt="code logo">
-                </a>
-                <button class="navbar-toggler rounded-0 ml-auto" type="button" data-toggle="collapse"
-                    data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+<body>
+    <nav class="navbar navbar-expand-sm navbar-light bg-dark  ">
+        <div class="navbar-brand" style="color: lightskyblue">Angella Jean-Louis</div>
+        <div id="navbarNav">
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
                         <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li> -->
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="portfolio.html">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger"
-                                href="assets/img/Angella T Jean-Louis Resume.pdf">Resume</a></li>
+                                href="file:///C:/Users/angie/Downloads/Angella%20T%20Jean-Louis%20Resume.pdf">Resume</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger"
-                                href="https://https://github.com/Angella77" target="_blank">GitHub</a></li>
+                                href="https://github.com/Angella77" target="_blank">GitHub</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger"
                                 href="https://www.linkedin.com/in/angella-jean-louis-558309143/"
                                 target="_blank">LinkedIn</a></li>
@@ -74,9 +69,17 @@
         <!-- About-->
         <section class="page-section" id="about">
             <div class="container about-cir">
-                <h2>About Me</h2>
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">About Me</h2>
+                    <h3 class="section-subheading text-muted"></h3>
+                </div>
             </div>
-            </div>
+            <ul class="timeline">
+                <li>
+                    <div class="timeline-image"><img class="rounded-circle img-fluid"
+                          img src="Angella.jpg" alt="" /></div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
 
             <div class="col-lg-9 col-md-8 col-sm-12 my-auto text-center text-md-left text-lg-left border-left pl-4">
                 <p>Hello, My name is Angella Jean-Louis. I'm excited to learn how to code and to get involved in this
