--- a/portfolio.html
+++ b/portfolio.html
@@ -7,3 +7,25 @@
         <link rel="stylesheet" href="assets/style.css">
         <title>Angella Jean-Louis: Portfolio</title>
 </head>
+
+<body>
+    <nav class="navbar navbar-expand-sm navbar-light bg-dark">
+      <div class="navbar-brand" style="color: rgb(161, 118, 118)">Angella Jean-Louis</div>
+        <div id="navbarNav">
+          <ul class="navbar-nav" >            
+            <li class="nav-item">
+              <a class="nav-link" style="color: blueviolet" href="./index.html">About Me</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link"  style="color: rgb(255, 205, 205)" href="#"><u>Portfolio</u><span class="sr-only">(current)</span></a>
+            </li>
+            <li class='dropdown'>
+              <div class="nav-link" style="color: rgb(223, 255, 205)">Contact</div>
+              <div class="dropdown-content">
+                <a href="tel:561-800-9947">Phone:  (561) 800-9947</a>
+                <a href="mailto:angiejeanlewis@gmail.com">E-mail:  angiejeanlewis@gmail.com</a>
+              </div>
+            </li>
+          </ul>
+        </div> 
+    </nav>
