--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
                 <a class="nav-link"  style="color: rgb(255, 205, 205)" href="#"><u>Portfolio</u><span class="sr-only">(current)</span></a>
             </li>
             <li class='dropdown'>
-              <div class="nav-link" style="color: rgb(223, 255, 205)">Contact</div>
+              <div class="nav-link" style="color: rgb(223, 255, 205)" href="./contact.html">Contact</div>
               <div class="dropdown-content">
                 <a href="tel:561-800-9947">Phone:  (561) 800-9947</a>
                 <a href="mailto:angiejeanlewis@gmail.com">E-mail:  angiejeanlewis@gmail.com</a>
@@ -29,3 +29,10 @@
           </ul>
         </div> 
     </nav>
+
+    <section class="page-section bg-light" id="portfolio">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="section-heading text-uppercase">Portfolio</h2>
+                <h3 class="section-subheading text-muted">Full Stack Web Developer Projects</h3>
+            </div>
