--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                 href="https://www.linkedin.com/in/angella-jean-louis-558309143/"
                                 target="_blank">LinkedIn</a></li>
                         <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Team</a></li> -->
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
