--- a/portfolio.html
+++ b/portfolio.html
@@ -31,3 +31,29 @@
                 <h2 class="section-heading text-uppercase">Portfolio</h2>
                 <h3 class="section-subheading text-muted">Full Stack Web Developer Projects</h3>
             </div>
+            <div class="col-sm">
+                    <div class="card">
+                        <div class="card-body">
+                    <h5 class="card-title">Employee Management System</h5>
+                    <a href="https://github.com/Angella77/Homework-12" target="_blank" class="btn btn-primary">Github Repository</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm">
+                <div class="card">
+                    <div class="card-body">
+                <h5 class="card-title">Express Handlebars</h5>
+                <a href="https://github.com/Angella77/Homework-13" target="_blank" class="btn btn-primary">Github Repository</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm">
+                <div class="card">
+                    <div class="card-body">
+                <h5 class="card-title">Party Planner</h5>
+                <a href="https://peaceful-shore-75888.herokuapp.com/" target="_blank" class="btn btn-primary">Launch Application</a>
+                <a href="https://github.com/Angella77/Project2" target="_blank" class="btn btn-primary">Github Repository</a>
+                </div>
+                </div>
+            </div>
+    </section>
