--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Hello</div>
-                <div class="masthead-heading text-uppercase">Angella Jean-Louis</div>
                 <!-- <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a> -->
             </div>
         </header>
@@ -45,8 +43,7 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Full Stack Web Developer Projects</h3>
+                    <h2 class="section-heading text-uppercase">Professional Portfolio</h2>
                 </div>
                 <div class="row text-center text-lg-left">
                     <div class="col-lg-4 col-md-6 col-12">
@@ -82,14 +79,10 @@
                         <div class="timeline-heading">
 
             <div class="col-lg-9 col-md-8 col-sm-12 my-auto text-center text-md-left text-lg-left border-left pl-4">
-                <p>Hello, My name is Angella Jean-Louis. I'm excited to learn how to code and to get involved in this
-                    field. So far I have learned a bunch of cool things, like learning to built this responsive
-                    portfolio. Even though it's not fully done right, nevertheless I was able to create something. I'm
-                    excited to learn more and build more cool things and definitely build a much better responsive
-                    portfolio in the very near future. I'm still not there in creating an actual responsive portfolio.
-                    Even I've learned the tools to create it but I'm still struggling to create. I'm finding that my
-                    lack of time and energy is working against me in doing everything like I need to. I'm hoping forward
-                    and hoping that I find the time and energy to put into practicing with what I'm learning soon.</p>
+                <p>Hello, My name is Angella Jean-Louis. I was born in Haiti and lived there for 7 years of my life. Then I moved to the United States, specifically to New Jersey, with my dad and it was a culture shock for me and a journey to adjust to my new life. Then after living in New Jersey for about 10 years, I moved to Florida and started University there. I started University with the intent of becoming a Surgeon. However, after taking a couple medical classes, I quickly realized that it was not for me. Now I'm on this journey of learning how to code to be a part of the IT field, which was not part of my original plans for my life. Nevertheless, I'm excited to learn how to code and to get involved in this
+                    field.</p> <p>So far I have learned a bunch of cool things, like learning to built this responsive
+                        portfolio. And working on different cool projects with my classmates, which was a great learning experience for me. I'm
+                        excited to learn more, to build more cool things and definitely to be better as a developer. I'm still not there yet in being confortable with coding and building different things like I want to be, however I'm willing to keep learning and growing as a developer. I hope that you enjoyed exploring my professional portfolio and let me know if you want further details about me. Thank You!</p>
             </div>
             </div>
         </section>
@@ -98,6 +91,10 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact Me</h2>
+                    <div class="dropdown-content">
+                        <a href="tel:561-800-9947">Phone:  (561) 800-9947</a>
+                        <a href="angiejeanlewis@gmail.com">E-mail:  angiejeanlewis@gmail.com</a>
+                      </div>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <form id="contactForm" name="sentMessage" novalidate="novalidate">
