--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,10 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Contact Me</h2>
+                <div class="dropdown-content">
+                    <a href="tel:561-800-9947">Phone:  (561) 800-9947</a>
+                    <a href="angiejeanlewis@gmail.com">E-mail:  angiejeanlewis@gmail.com</a>
+                  </div>
                 <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
             <form id="contactForm" name="sentMessage" novalidate="novalidate">
